fixed dark mode colors

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,15 +1,6 @@
-/* General Section Styling */
-.section {
-    padding: 50px 0;
-    background-color: #f9f9f9;
-}
 
-/* Container */
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-}
+
+
 
 /* Contact Heading */
 h6 {
@@ -20,10 +11,12 @@ h6 {
 
 /* Form Styling */
 .contact-form {
-    background: white;
+    background: var(--cardColor);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s;
+    margin-bottom: 30px;
 }
 
 .contact-form .form-row {
@@ -49,7 +42,13 @@ h6 {
     font-size: 1rem;
     outline: none;
     transition: border-color 0.3s;
+    background-color: var(--form);
+    color: var(--textColor);
 }
+.contact-form .form-control::placeholder {
+    color: var(--textColor); 
+    opacity: 0.7;
+  }
 
 .contact-form .form-control:focus {
     border-color: #493f75;
