--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,17 +1,11 @@
 header {
   background: 
-    linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(249, 249, 249, 1)),
+    linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--gradientAfter)),
     var(--header-image);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 90vh;
-}
-
-body.dark-mode header {
-  background:
-      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(30, 30, 30, 1)),
-      url('../../assets/dark-header.png');
 }
 
 
@@ -233,7 +227,7 @@ button{
 .typing-text {
   font-size: 1em;
   font-weight: bold;
-  color: #493f75;
+  color: var(--primary);
 
   white-space: wrap;
   overflow: hidden;
