--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -117,7 +117,7 @@
     }
 
     .item {
-        width: 120px;
+        width: 60px;
         height: 70px;
         font-size: 0.8rem;
         line-height: 70px;
