--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,34 @@
+:root {
+  
+  --font-family-sans-serif: "Open Sans", sans-serif;
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 [data-theme="light"] {
-  --primary: #493f75;
-  --background: #f9f9f9;
-  --header-image: url('./assets/header.jpg'); /* Light theme header image */
+  --primary: #493f75 !important;
+  --background: #f9f9f9 !important;
+  --header-image: url('./assets/header.jpg'); 
+  --gradientAfter : rgba(249, 249, 249, 1);
+  --cardColor: #F9F9F9;
+  --textColor: black;
+  --shadow: #dee2e6;
+  --form: #f9f9f9;
+
 }
 
 
 [data-theme="dark"] {
   --primary: #8f86d4;
   --background: #1e1e1e;
-  --header-image: url('./assets/dark-header.png'); 
+  --header-image: url('./assets/dark-header.png');
+  --gradientAfter : rgba(30, 30, 30, 1); 
+  --cardColor: #493f75b3;
+  --textColor: #a69cde;
+  --shadow: #493f75;
+  --form: #1e1e1e;
 }
 
-:root {
-  --primary: #493f75;
-  --background: #ffffff;
-  --text-color: #333333;
-  --card-background: #ffffff;
 
-
-  --font-family-sans-serif: "Open Sans", sans-serif;
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-
-.dark-mode {
-  --primary: #a69cd8;
-  --background: #333333;
-  --text-color: #f9f9f9;
-  --card-background: #444444;
-
-}
 
 * {
   padding: 0px;
@@ -46,9 +46,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 body {
-  background-color: var(--background);
-  color: var(--text-color);
+  background-color: var(--background) !important;
+  color: var(--text-color) !important;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -123,10 +124,15 @@ main {
   font-weight: 700;
   color: #a69cd8;
 }
+.projects p {
+
+  color: var(--textColor);
+}
 
 #testimonials {
 
-  background-color: #f9f9f9;
+  background-color: var(--background); 
+
 }
 
 .testimonialContent {
@@ -139,7 +145,7 @@ main {
 
 .testimonialCard {
   border: 1px solid #dee2e6;
-  box-shadow: 1px 1px 10px 1px #dee2e6;
+  box-shadow: 1px 1px 10px 1px var(--shadow);
   border-radius: 8px;
   padding: 20px;
   display: flex;
@@ -147,7 +153,7 @@ main {
   align-items: center;
   width: 100%;
   max-width: 600px;
-  background-color: #fff;
+  background-color: var(--cardColor);
   transition: box-shadow 0.3s ease;
 }
 
@@ -168,7 +174,7 @@ main {
 
 .cardContent p {
   text-align: left;
-  color: #333;
+  color: var(--textColor);
   line-height: 1.5;
   padding: 20px;
 }
@@ -177,7 +183,7 @@ main {
 
 #highlights {
   padding: 50px 20px;
-  background-color: #f9f9f9;
+  background-color: var(--background); 
   text-align: center;
 }
 
@@ -195,7 +201,7 @@ main {
 }
 
 .highlight-card {
-  background-color: #fff;
+  background-color: var(--cardColor);
   border: 1px solid #dee2e6;
   border-radius: 10px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
@@ -212,18 +218,19 @@ main {
 
 .highlight-card i {
   font-size: 3em;
-  color: #493f75;
+  color: var(--textColor);
   margin-bottom: 15px;
 }
 
 .highlight-card h3 {
   font-size: 1.5em;
   margin-bottom: 10px;
+  color: var(--textColor);
 }
 
 .highlight-card p {
   font-size: 1em;
-  color: #333;
+  color: var(--textColor);
 }
 
 
@@ -299,16 +306,17 @@ footer {
       gap: 5px;
       max-width: 40%;
   }
-
   .section {
-      margin: 0px;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      flex-direction: column;
-
+    margin: 0px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: var(--background); /* Dark mode background */
+    color: var(--text-color); /* Adjust text color for dark mode */
   }
+  
 
   header {
       height: 100%;
